manual entry